--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,9 @@
+manifest {
+    homePage = 'https://github.com/DockstoreTestUser2/galaxy-workflows'
+    description = 'Mutant version of https://github.com/lehtiolab/galaxy-workflows for testing'
+    mainScript = 'qc.nf'
+}
+
 profiles {
 
   standard {
