--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,7 @@
 manifest {
     homePage = 'https://github.com/DockstoreTestUser2/galaxy-workflows'
     description = 'Mutant version of https://github.com/lehtiolab/galaxy-workflows for testing'
+    author = 'test author'
     mainScript = 'qc.nf'
 }
 
